Better fix for empty dropdown button alignment Now an &nbsp; character is inserted and bootstrap is left alone to deal with alignment.

--- a/IPython/html/static/notebook/less/widgets.less
+++ b/IPython/html/static/notebook/less/widgets.less
@@ -98,7 +98,6 @@
 
         .widget-combo-btn {
             min-width: 138px; /* + 26px drop arrow btn = 164px */
-            min-height: 1ex;
         }
 
         .widget-container {
